deployments/kubernetes/deployment/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cnap-mp-demo
  namespace: cnap-mp-demo
  annotations:
    kuma.io/sidecar-injection: enabled
