deployments/kubernetes/deployment/base/backend-v0-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cnap-demo-backend-v0
  namespace: cnap-mp-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cnap-demo-backend
      version: v0
      env: prod
  template:
    metadata:
      labels:
        app: cnap-demo-backend
        version: v0
        env: prod
    spec:
      containers:
      - name: kuma-be
        image: kvn0218/kuma-demo-be:latest 
        resources:
         requests:
          cpu: 15m
          memory: 105M
         limits:
          cpu: 15m
          memory: 105M
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3001
