deployments/kubernetes/deployment/base/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: cnap-mp-demo
  annotations:
    8080.service.kuma.io/protocol: "http"
    ingress.kubernetes.io/service-upstream: "true"
spec:
  selector:
    app: cnap-demo-frontend
  ports:
  - name: http
    port: 8080
    targetPort: 8080
