deployments/kubernetes/deployment/base/postgres-master-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: cnap-mp-demo
  labels:
    app: postgres
spec:
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  selector:
    app: postgres
