deployments/kubernetes/deployment/base/ingress-frontend.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: ingress-cnap-mp-demo-demo
  namespace: cnap-mp-demo
  labels:
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: mpdemo.cnap.xyz
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              serviceName: frontend
              servicePort: http
